# Mh33Lib

./: CMakeLists.txt  LICENSE  MhEndianness.hpp  MhLib.kdev4  MhLib.pro  README.md  generate-cmake.pl  kissfft-LICENSE.txt  libjpegturbo-LICENSE.md  main.cpp  update-cmake.sh
Gimmick/: MhGimmick.hpp  MhWordGenerator.cpp  MhWordGenerator.hpp
Interface/: Equatable.hpp  MhComparable.hpp  MhEquatable.hpp
Io/: MhBuffer.hpp  MhBufferWrapper.cpp  MhBufferWrapper.hpp  MhCompressor.cpp  MhCompressor.hpp  MhDataStream.hpp  MhDecompressor.cpp  MhDecompressor.hpp  MhFile.cpp  MhFile.hpp  MhFileIO.cpp  MhFileIO.hpp  MhIo.hpp  MhIoDevice.hpp  MhLoadable.hpp  MhSerializable.hpp  MhSocket.cpp  MhSocket.hpp  MhStderr.cpp  MhStderr.hpp  MhStdin.cpp  MhStdin.hpp  MhStdout.cpp  MhStdout.hpp  PhysFSIO.cpp  PhysFSIO.hpp
Io/private/: MhSocketUnix.cpp  MhSocketUnix.hpp
IoSys/: MhFilesystem.cpp  MhFilesystem.hpp  MhIoSystem.hpp  PhysFSIoSystem.cpp  PhysFSIoSystem.hpp
Media/AdvancedAudio/: MhAdvancedAudio.hpp  MhAmbisonicPanner.cpp  MhAmbisonicPanner.hpp  MhAudioBuffer.cpp  MhAudioBuffer.hpp  MhAudioEffect.hpp  MhAudioEffectSlot.cpp  MhAudioEffectSlot.hpp  MhAudioError.cpp  MhAudioError.hpp  MhAudioMixer.cpp  MhAudioMixer.hpp  MhAudioPacket.hpp  MhAudioPlayable.hpp  MhAudioStreamer.cpp  MhAudioStreamer.hpp  MhFramerateConverter.cpp  MhFramerateConverter.hpp  MhMatrixPanner.cpp  MhMatrixPanner.hpp  MhModulePlayer.cpp  MhModulePlayer.hpp  MhPositionalPanner.cpp  MhPositionalPanner.hpp  MhSoundSource.cpp  MhSoundSource.hpp
Media/AdvancedAudio/FX/: MhClampEffect.cpp  MhClampEffect.hpp  MhConvolver.cpp  MhConvolver.hpp  MhCrushEffect.cpp  MhCrushEffect.hpp  MhImpulseGenerator.cpp  MhImpulseGenerator.hpp  SampleLevelEffect.cpp  SampleLevelEffect.hpp
Media/Audio/: MhAudio.hpp  MhAudioIterator.hpp  MhModuleRenderer.cpp  MhModuleRenderer.hpp  MhResampler.cpp  MhResampler.hpp  MhSoundFile.cpp  MhSoundFile.hpp
Media/Audio/FFTConvolver/: AudioFFT.cpp  FFTConvolver.cpp  FFTConvolver.h  IrBuffer.cpp  IrBuffer.hpp  Utilities.cpp  Utilities.h
Media/Image/: MhDDS.cpp  MhDDS.hpp  MhDdsHeader.cpp  MhDdsHeader.hpp  MhDecodeTarget.hpp  MhGIF.cpp  MhGIF.hpp  MhImage.hpp  MhImageType.hpp  MhJPEG.cpp  MhJPEG.hpp  MhMNG.cpp  MhMNG.hpp  MhPNG.cpp  MhPNG.hpp  MhPng.cpp  MhPng.hpp  MhRGB.hpp  MhStandardColourFormat.hpp  MhTGA.cpp  MhTGA.hpp  MhTgaHeader.cpp  MhTgaHeader.hpp  MhWEBP.cpp  MhWEBP.hpp
SIMD/: MhSIMD.hpp
SIMD/private/x86/: MhFloat32x4_private.cpp  MhFloat32x4_private.hpp  MhFloat32x8_private.cpp  MhFloat32x8_private.hpp  MhFloat64x2_private.cpp  MhFloat64x2_private.hpp  MhInt32x4_private.cpp  MhInt32x4_private.hpp
Util/: MhClock.cpp  MhClock.hpp  MhEndianness.hpp  MhGlobals.hpp  MhIntegralIterator.hpp  MhNormDenorm.hpp  MhRNG.cpp  MhRNG.hpp  MhTime.cpp  MhTime.hpp  MhUUID.cpp  MhUUID.hpp
cmake_modules/: FindLibSamplerate.cmake  FindOpenMPT.cmake
include/MhLib/Gimmick/: MhGimmick.hpp  MhWordGenerator.hpp
include/MhLib/Interface/: MhBinaryTree.hpp  MhComparable.hpp  MhEquatable.hpp  MhObserv.hpp
include/MhLib/Io/: MhBufferWrapper.hpp  MhCompressor.hpp  MhDataStream.hpp  MhDecompressor.hpp  MhFile.hpp  MhFixedBufferWrapper.hpp  MhIo.hpp  MhIoDevice.hpp  MhProxyReadStream.hpp  MhProxyWriteStream.hpp  MhSnappyCompressor.hpp  MhSnappyDecompressor.hpp  MhSocket.hpp  MhSslDecryptor.hpp  MhSslEncryptor.hpp  MhStderr.hpp  MhStdin.hpp  MhStdout.hpp  MhTemporaryFile.hpp  MhZflator.hpp  MhZstdCompressor.hpp  MhZstdDecompressor.hpp  PhysFSIO.hpp
include/MhLib/IoSys/: MhFilesystem.hpp  MhIoSystem.hpp  PhysFSIoSystem.hpp
include/MhLib/Media/AdvancedAudio/: MhAdvancedAudio.hpp  MhAmbisonicPanner.hpp  MhAudioBuffer.hpp  MhAudioEffect.hpp  MhAudioEffectSlot.hpp  MhAudioError.hpp  MhAudioMixer.hpp  MhAudioPacket.hpp  MhAudioPlayable.hpp  MhAudioStatus.hpp  MhAudioStreamer.hpp  MhFramerateConverter.hpp  MhMatrixPanner.hpp  MhModulePlayer.hpp  MhPositionalPanner.hpp  MhSoundSource.hpp
include/MhLib/Media/Audio/: MhAudio.hpp  MhAudioIterator.hpp  MhModuleRenderer.hpp  MhResampler.hpp  MhSoundFile.hpp
include/MhLib/Media/GFX/: MhCubemap.hpp  MhGFX.hpp  MhGFXHandle.hpp  MhIndexedMesh.hpp  MhPipeline.hpp  MhShaderModule.hpp  MhTexture1D.hpp  MhTexture2D.hpp  MhTexture3D.hpp  MhTextureArray1D.hpp  MhTextureArray2D.hpp  MhUnindexedMesh.hpp  (+1 more)
include/MhLib/SIMD/: MhSIMD.hpp
include/MhLib/Util/: MhDynamicLib.hpp  MhEndianness.hpp  MhFixedStack.hpp  MhIntegralIterator.hpp  MhNormDenorm.hpp  MhRNG.hpp  MhThreadsafeQueue.hpp  MhUUID.hpp  half.hpp
src/: CMakeLists.txt
src/MhLib/: CMakeLists.txt
src/MhLib/Gimmick/: CMakeLists.txt  MhWordGenerator.cpp
src/MhLib/Io/: CMakeLists.txt  MhBufferWrapper.cpp  MhCompressor.cpp  MhDecompressor.cpp  MhFile.cpp  MhFixedBufferWrapper.cpp  MhProxyReadStream.cpp  MhProxyWriteStream.cpp  MhSnappyCompressor.cpp  MhSnappyDecompressor.cpp  MhSocket.cpp  MhSslDecryptor.cpp  MhSslEncryptor.cpp  MhStderr.cpp  MhStdin.cpp  MhStdout.cpp  MhTemporaryFile.cpp  MhZflator.cpp  MhZstdCompressor.cpp  MhZstdDecompressor.cpp  PhysFSIO.cpp
src/MhLib/IoSys/: CMakeLists.txt  MhFilesystem.cpp  PhysFSIoSystem.cpp
src/MhLib/Media/: CMakeLists.txt
src/MhLib/SIMD/: CMakeLists.txt
src/MhLib/Util/: CMakeLists.txt  MhDynamicLib.cpp  MhRNG.cpp  MhUUID.cpp
test/: CMakeLists.txt
test/source/: CMakeLists.txt  main.cpp
(+65 files in other folders)
